...
      },
      "max": {
        "type": "int"
      }
    }
  },
  "settingsLanguageTitle": "Language",
  "settingsLanguageSubtitleEnglish": "English",
  "settingsLanguageSubtitleSpanish": "Español",
  "settingsLanguageSheetTitle": "Choose language",
  "settingsLanguageEnglish": "English",
  "settingsLanguageSpanish": "Español",
  "dashboardCouldNotLoadToday": "Could not load today",
...
